--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -5,9 +5,9 @@
     </HEAD>
     <BODY>
         <H1> States</H1>
-        <UL id="states_list">
-        {% for item in states_list %}
-            <LI>item.id: <B>item.name</B></LI>
+        <UL id="states">
+        {% for state in states %}
+        <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
         {% endfor %}
         </UL>
     </BODY>
